fix title alignment and max width on the calendar in desktop

--- a/Kenia-Franklin-Design/main.css
+++ b/Kenia-Franklin-Design/main.css
@@ -44,9 +44,12 @@ h1, h2, h3, p{
   position: relative;
 }
 
-.title {
+.title,
+.special-title {
   height: 32px;
   display: flex;
+  text-align: center;
+  justify-content: space-around;
   font-size: 23px;
   flex: 100%;
   background-color: #4F6367;
@@ -374,13 +377,17 @@ span {
       width:100%;
     }
 
+    .avatar-section,
+    .calendar-section {
+      max-width: 450px;
+    }
+
     .scroll {
       display:none;
     }
 
-    .special-title {
-      text-align: center;
-      justify-content: space-around;
+    .title {
+      justify-content: flex-start;
+      padding-left: 11px;
     }
-
   }
